--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.6.2",
+    "mongodb": "^4.10.0",
     "nodemon": "^2.0.20"
   }
 }
